# Timewise

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  conftest.py  main.py  pyproject.toml
backend/api/: main.py  registry.py
backend/config/: settings.py  test_settings.py  testing.py
backend/config/management/commands/: lint.py  startapp.py  testall.py
backend/core/: settings.py
backend/infra/authz/: admin.py  models.py
backend/infra/authz/api/: dependencies.py  router.py
backend/infra/authz/dtos/: auth_dtos.py  dtos.py
backend/infra/authz/entities/: auth_entities.py
backend/infra/authz/migrations/: 0001_initial.py  0002_authloginattemptmodel_and_more.py  0002_rename_authz_tokens_expires_3d419f_idx_authz_token_expires_bc05cf_idx_and_more.py  (+1 more)
backend/infra/common/: classes.py  conftest.py  exceptions.py  responses.py  test_architecture.py
backend/infra/common/exceptions/: __init__.py  (+2 more)
backend/infra/licensing/: admin.py  models.py
backend/infra/tenants/: admin.py  decorators.py  exceptions.py  models.py
backend/platform/licensing/: models.py
backend/platform/tenants/: admin.py  models.py
backend/product/approvals/: admin.py  exceptions.py  models.py
backend/product/common/: classes.py
backend/product/costing/: admin.py  models.py
backend/product/timekeeping/: admin.py  exceptions.py  models.py
backend/product/workforce/: admin.py  exceptions.py  models.py
backend/shared/audit/: admin.py  models.py
backend/shared/common/: models.py
backend/shared/notifications/: admin.py  models.py
(+86 files in other folders)
