[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-unfold>=0.89.0",
    "fastapi>=0.135.3",
    "psycopg[binary]>=3.2.9",
    "uvicorn[standard]>=0.44.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
